# hmp-aviel

./: .coverage  .flake8  .gitignore  .mypy.ini  .readthedocs.yml  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/hmp_aviel/: console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
